--- a/services/registry/ingress.yaml
+++ b/services/registry/ingress.yaml
@@ -1,25 +1,16 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
 metadata:
   name: registry
   namespace: registry
-  annotations:
-    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
-    traefik.ingress.kubernetes.io/router.middlewares: registry-ratelimit@kubernetescrd
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure
 spec:
-  ingressClassName: traefik
+  entryPoints:
+    - websecure
+  routes:
+    - match: Host(`reg.crimelabs.dev`)
+      kind: Rule
+      services:
+        - name: registry
+          port: 5000
   tls:
-    - hosts:
-        - reg.crimelabs.dev
-  rules:
-    - host: reg.crimelabs.dev
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: registry
-                port:
-                  number: 5000
+    certResolver: letsencrypt
