--- a/services/registry/service.yaml
+++ b/services/registry/service.yaml
@@ -3,14 +3,12 @@ kind: Service
 metadata:
   name: registry
   namespace: registry
-  labels:
-    app: registry
 spec:
-  type: ClusterIP
-  ports:
-    - port: 5000
-      targetPort: 5000
-      protocol: TCP
-      name: http
   selector:
     app: registry
+  ports:
+    - name: registry
+      port: 5000
+      targetPort: 5000
+      protocol: TCP
+  type: ClusterIP
