--- a/projects/accelome-de/main/website/ingress.yaml
+++ b/projects/accelome-de/main/website/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: website-https
-  workspace: accelome
+  namespace: accelome
 spec:
   entrypoints:
     - websecure
