--- a/projects/accelome-de/main/website/ingress.yaml
+++ b/projects/accelome-de/main/website/ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: website-https
@@ -15,7 +15,7 @@ spec:
   tls:
     certResolver: letsencrypt
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: website-http
