--- a/projects/singlerust/website/service.yaml
+++ b/projects/singlerust/website/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: website
-  namespace: accelome
+  namespace: singlerust
 spec:
   selector:
     app: website
