updated sr deployment

--- a/projects/singlerust/website/deployment.yaml
+++ b/projects/singlerust/website/deployment.yaml
@@ -18,6 +18,7 @@ spec:
       containers:
         - name: website
           image: reg.crimelabs.dev/singlerust-main-website:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 3000
               name: http
