--- a/projects/mcpmed-org/website/deployment.yaml
+++ b/projects/mcpmed-org/website/deployment.yaml
@@ -26,7 +26,7 @@ spec:
             - name: PORT
               value: "3000"
             - name: ORIGIN
-              value: "https://mcpmed.com"
+              value: "https://mcpmed.org"
             - name: NODE_ENV
               value: "production"
           envFrom:
